minor fixes; change color for better contrast

--- a/css/main.css
+++ b/css/main.css
@@ -36,13 +36,14 @@ nav {
   height: 10vw;
   background-color: #252831;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
 nav h1 {
   margin: 0;
+  width: 100%;
   text-align: center;
   font-size: 1.2em;
 }
@@ -84,6 +85,7 @@ nav h1 a {
   padding: 0.3em 0 0.3em 0.3em;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: left;
   align-items: center;
   background-color: #3397DB;
@@ -126,7 +128,7 @@ nav h1 a {
 }
 
 a {
-  color: #f18100;
+  color: #FF9800;
   text-decoration: none;
 }
 
@@ -148,8 +150,8 @@ a img {
 
 
 #restaurants-list li h1 {
-  color: #f18100;
-  font-size: 1.2em;
+  color: #FF9800;
+  font-size: 1.2em; 
   text-transform: uppercase;
 }
 
@@ -158,8 +160,8 @@ a img {
 }
 
 #restaurants-list li a {
-  background-color: #f18100;
-  box-shadow: 5px 5px 5px #f18100c2;
+  background-color: #FF9800;
+  box-shadow: 5px 5px 5px #FF9800c2;
   color: #fff;
   display: inline-block;
   margin: 15px auto;
